# taxi_demand_predictor

./: README.md  pyproject.toml
data/transformed/: ts_data_2022_01.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_target.ipynb  04_transform_raw_data_into_features_and targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb
src/: data.py  data_split.py  paths.py
