[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Hichemchir <hichem.c@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
requests = "^2.29.0"
pandas = "^2.0.1"
pyarrow = "^11.0.0"
tqdm = "^4.65.0"
plotly = "^5.14.1"
scikit-learn = "^1.2.2"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
optuna = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
